--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <meta property="og:title" content="EncodLab Studio - Laboratório de Codificação" />
     <meta property="og:description" content="Laboratório técnico interativo para geração, validação e decodificação de estruturas de autenticação e codificação (JWT, Base64, URL). Seguro e 100% client-side." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/social-preview.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@edisonvargas" />
     <meta name="twitter:title" content="EncodLab Studio - Laboratório de Codificação" />
     <meta name="twitter:description" content="Laboratório técnico interativo para JWT, Base64 e URL encoding" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/social-preview.png" />
   </head>
 
   <body>
